; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/media-io/extr_video-scaler-ffmpeg.c_get_ffmpeg_coeffs.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/media-io/extr_video-scaler-ffmpeg.c_get_ffmpeg_coeffs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SWS_CS_ITU601 = common dso_local global i32 0, align 4
@SWS_CS_ITU709 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @get_ffmpeg_coeffs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_ffmpeg_coeffs(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %14 [
    i32 128, label %5
    i32 130, label %8
    i32 129, label %11
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @SWS_CS_ITU601, align 4
  %7 = call i32* @sws_getCoefficients(i32 %6)
  store i32* %7, i32** %2, align 8
  br label %17

8:                                                ; preds = %1
  %9 = load i32, i32* @SWS_CS_ITU601, align 4
  %10 = call i32* @sws_getCoefficients(i32 %9)
  store i32* %10, i32** %2, align 8
  br label %17

11:                                               ; preds = %1
  %12 = load i32, i32* @SWS_CS_ITU709, align 4
  %13 = call i32* @sws_getCoefficients(i32 %12)
  store i32* %13, i32** %2, align 8
  br label %17

14:                                               ; preds = %1
  %15 = load i32, i32* @SWS_CS_ITU601, align 4
  %16 = call i32* @sws_getCoefficients(i32 %15)
  store i32* %16, i32** %2, align 8
  br label %17

17:                                               ; preds = %14, %11, %8, %5
  %18 = load i32*, i32** %2, align 8
  ret i32* %18
}

declare dso_local i32* @sws_getCoefficients(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
